--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ proguard/
 
 # Android Studio captures folder
 captures/
+.idea/
+android-rest.iml
+android-rest/android-rest-android-rest.iml
+app/app.iml
