Removed android anotations and incremented version

--- a/android-rest/build.gradle
+++ b/android-rest/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'maven-publish'
 
 
 group = 'com.devopcience.android_rest'
-version = '1.0.0-ALPHA2'
+version = '1.0.1-ALPHA'
 
 android {
     compileSdkVersion 23
@@ -15,7 +15,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0.0-ALPHA2"
+        versionName "1.0.1-ALPHA"
     }
     buildTypes {
         release {
