--- a/android-rest/build.gradle
+++ b/android-rest/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'maven-publish'
+apply plugin: 'pmd'
 
 
 group = 'com.devopcience.android_rest'
@@ -55,6 +56,44 @@ task generateJavadocs(type: Javadoc) {
             .join(File.pathSeparator))
 }
 
+
+task pmd(type: Pmd, dependsOn: assembleDebug) {
+    description 'Run pmd'
+    group 'verification'
+    ruleSets = [
+            'java-android',
+            'java-basic',
+            'java-braces',
+            'java-clone',
+            'java-codesize',
+            'java-comments',
+            'java-controversial',
+            'java-coupling',
+            'java-design',
+            'java-empty',
+            'java-finalizers',
+            'java-imports',
+            'java-logging-java',
+            'java-naming',
+            'java-optimizations',
+            'java-strictexception',
+            'java-strings',
+            'java-sunsecure',
+            'java-typeresolution',
+            'java-unnecessary',
+            'java-unusedcode'
+    ]
+    source = fileTree('src/main/java')
+    consoleOutput = true
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+check.doLast {
+    project.tasks.getByName("pmd").execute()
+}
 
 
 artifacts {
