--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "devopcience.com.droid_restly"
+        applicationId "com.devopcience.droid_restly"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -20,7 +20,9 @@ android {
 }
 
 dependencies {
+    compile project(":android-rest")
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
 }
